<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="209dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_menu_foreground"/>
            <TextView
                android:id="@+id/textSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/settings"
                android:textColor="#d6edc8"/>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/recPush"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            android:shape="rectangle">

            <TextView
                android:id="@+id/textPush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/push"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switchPush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:thumbTint="@color/green" />

        </RelativeLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:id="@+id/recCity"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            android:shape="rectangle">

            <TextView
                android:id="@+id/textCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/selectCity"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switchCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:thumbTint="@color/green" />

        </RelativeLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:id="@+id/recEnter"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            android:shape="rectangle">

            <TextView
                android:id="@+id/textEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/enter"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switchEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:thumbTint="@color/green" />

        </RelativeLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/resetAuth"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>