<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="209dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_arrow_back_foreground" />

            <TextView
                android:id="@+id/textSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/profile"
                android:textColor="#d6edc8"/>
        </androidx.appcompat.widget.Toolbar>
        <RelativeLayout
            android:id="@+id/recEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:shape="rectangle">
            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/email"
                android:textColor="@color/text_gray"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/recPush"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:shape="rectangle"
            android:background="@color/light_gray">

            <TextView
                android:id="@+id/textPush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textColor="@color/orange"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/setEmail"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_update_foreground" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:shape="rectangle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/passwordField"
                android:textColor="@color/text_gray"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/recPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:shape="rectangle"
            android:background="@color/light_gray">

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:textColor="#757575"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/password"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_help_foreground" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recBonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:shape="rectangle"
            android:background="@color/light_gray">

            <TextView
                android:id="@+id/textBonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:text="@string/bonusInfo"
                android:textColor="#757575"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_arrow_foreground" />
        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>